--- a/pemesanan/src/main/resources/templates/indexC.html
+++ b/pemesanan/src/main/resources/templates/indexC.html
@@ -34,7 +34,7 @@
         <!-- Logo Header -->
         <div class="logo-header" data-background-color="blue">
 
-            <a href="index.html" class="logo">
+            <a th:href="@{/}" class="logo">
                 <img src="../assets/img/logo3.png" alt="navbar brand" class="navbar-brand">
             </a>
             <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -318,7 +318,7 @@
                 </div>
                 <ul class="nav nav-primary">
                     <li class="nav-item active">
-                        <a data-toggle="collapse" href="#dashboard" class="collapsed" aria-expanded="false">
+                        <a data-toggle="collapse" th:href="@{/}" class="collapsed" aria-expanded="false">
                             <i class="fas fa-home"></i>
                             <p>Dashboard</p>
                             <span class="caret"></span>
@@ -517,6 +517,283 @@
                     </div>
                 </div>
             </div>
+            <!--i-->
+            <div class="card">
+                <div class="card-body">
+
+                    <h4 class="card-title mt-3">Kemeja</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <!--<div class="card-body"><code>.col-xl-4</code></div>-->
+                                <img src="/resources/static/upload/Kemeja Panjang A.jpg" alt="img">
+                                <p>Kemeja Panjang A - Rp. 150.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Kemeja C.jpg" alt="img">
+                                <p>Kemeja C - Rp. 140.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Setelan A.jpg" alt="img">
+                                <p>Setelan W A - Rp. 245.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Kemeja Pendek B.jpg" alt="img">
+                                <p>Kemeja Pendek B - Rp. 130.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Kemeja K LK.jpg" alt="img">
+                                <p>Kemeja K LK - Rp. 100.000.-</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="card-title">Kaos</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Kaos Cerah.jpg" alt="img">
+                                <p>Kaos Cerah - Rp. 95.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Kaos Motif.jpg" alt="img">
+                                <p>Kaos Motif - Rp. 89.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Kaos C.jpg" alt="img">
+                                <p>Kaos C - Rp. 95.000.-</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="card-title">Celana</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Celana A.jpg" alt="img">
+                                <p>Celana A - Rp. 145.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Celana B.jpg" alt="img">
+                                <p>Celana B - Rp. 150.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Celana C.jpg" alt="img">
+                                <p>Celana C - Rp. 162.000.-</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="card">
+                                <img src="/resources/static/upload/Celana D.jpg" alt="img">
+                                <p>Celana D - Rp. 140.000.-</p>
+                            </div>
+                        </div>
+                    </div>
+
+                   <!-- <h4 class="card-title">Jaket</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body"><code>.col-sm-4</code></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body"><code>.col-sm-4</code></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body"><code>.col-sm-4</code></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="card-title">Seragam</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-body"><code>.col-4</code></div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-body"><code>.col-4</code></div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-body"><code>.col-4</code></div>
+                            </div>
+                        </div>
+                    </div>-->
+
+                    <!--<h4 class="card-title">Equality Width</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-demo-grid">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="card-title">Setting one column width</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body"><code>col-6</code></div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body"><code>col</code></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="card-title">Mix and Match (Showing different sizes on different screens)</h4>
+                    &lt;!&ndash; Stack the columns on mobile by making one full-width and the other half-width &ndash;&gt;
+                    <div class="row row-demo-grid">
+                        <div class="col-12 col-md-8">
+                            <div class="card">
+                                <div class="card-body"><code>col-12 col-md-8</code></div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4">
+                            <div class="card">
+                                <div class="card-body"><code>col-6 col-md-6</code></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    &lt;!&ndash; Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop &ndash;&gt;
+                    <div class="row row-demo-grid">
+                        <div class="col-sm-6 col-md-3">
+                            <div class="card">
+                                <div class="card-body"><code>col-sm-6 col-md-3</code></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3">
+                            <div class="card">
+                                <div class="card-body"><code>col-sm-6 col-md-3</code></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3">
+                            <div class="card">
+                                <div class="card-body"><code>col-sm-6 col-md-3</code></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3">
+                            <div class="card">
+                                <div class="card-body"><code>col-sm-6 col-md-3</code></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    &lt;!&ndash; Columns are always 50% wide, on mobile and desktop &ndash;&gt;
+                    <div class="row row-demo-grid">
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body"><code>col-6</code></div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body"><code>col-6</code></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4 class="card-title">Offset Grid (Adding some space when needed)</h4>
+                    <div class="row row-demo-grid">
+                        <div class="col-md-4">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <code>col-md-4</code>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ml-auto">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <code>col-md-4 ml-auto</code>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row row-demo-grid">
+                        <div class="col-md-4 ml-auto mr-auto">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <code>col-md-4 ml-auto mr-auto</code>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ml-auto mr-auto">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <code>col-md-4 ml-auto mr-auto</code>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row row-demo-grid">
+                        <div class="col-md-6 ml-auto mr-auto">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <code>col-md-6 ml-auto mr-auto</code>
+                                </div>
+                            </div>
+                        </div>
+                    </div>-->
+                </div>
+            </div>
+            <!--i-->
            <!-- <div class="page-inner mt&#45;&#45;5">
                 <div class="row mt&#45;&#45;2">
                     <div class="col-md-6">
