--- a/pemesanan/src/main/resources/templates/widgets.html
+++ b/pemesanan/src/main/resources/templates/widgets.html
@@ -610,7 +610,10 @@
 					</div>
 					<!-- Card With Icon States Color -->
 					<div class="row">
-						<div class="col-sm-6 col-md-3">
+						<div classMussum ipsum cacilds
+							 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+
+									 ="col-sm-6 col-md-3">
 							<div class="card card-stats card-round">
 								<div class="card-body ">
 									<div class="row">
