--- a/pemesanan/src/main/resources/templates/forms/productforms.html
+++ b/pemesanan/src/main/resources/templates/forms/productforms.html
@@ -480,7 +480,7 @@
 											<span class="sub-item">Form Produk</span>
 										</a>
 									</li>
-									<li>
+									<!--<li>
 										<a th:href="@{ordering/order}">
 											<span class="sub-item">Form Pemesanan</span>
 										</a>
@@ -494,7 +494,7 @@
 										<a th:href="@{user/create/customer}">
 											<span class="sub-item">Form Pelanggan</span>
 										</a>
-									</li>
+									</li>-->
 								</ul>
 							</div>
 						</li>
@@ -624,9 +624,17 @@
 												<input type="text" class="form-control input-bOrder-bottom" th:field="*{productName}"  id="productName" name="productName" required>
 												<label for="productName" class="placeholder">Nama product</label>
 											</div>
-											<div class="form-group form-floating-label">
+											<!--<div class="form-group form-floating-label">
 												<input type="text" class="form-control input-bOrder-bottom" th:field="*{description}"  rows="3" cols="45" id="description" name="description" required>
 												<label for="description" class="placeholder">Deskripsi</label>
+											</div>-->
+											<div class="form-group">
+												<div class="input-group">
+													<div class="input-group-prepend">
+														<span class="input-group-text">Deskripsi</span>
+													</div>
+													<textarea class="form-control" aria-label="With textarea" name="description"  th:field="*{description}" required="true"></textarea>
+												</div>
 											</div>
 											<div class="form-group form-floating-label">
 												<input type="number" class="form-control input-bOrder-bottom" th:field="*{price}"  name="price" id="price" required>
@@ -642,7 +650,6 @@
 								</div>
 								<div class="card-action">
 									<button class="btn btn-success">Submit</button>&nbsp;&nbsp;&nbsp;
-									<button class="btn btn-danger">Cancel</button>
 								</div>
 							</div>
 							</form>
