--- a/pemesanan/src/main/resources/templates/index.html
+++ b/pemesanan/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
         <!-- Logo Header -->
         <div class="logo-header" data-background-color="blue">
 
-            <a href="index.html" class="logo">
+            <a th:href="@{/}" class="logo">
                 <img src="../assets/img/logo3.png" alt="navbar brand" class="navbar-brand">
             </a>
             <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -472,7 +472,7 @@
                                             <span class="sub-item">Form Produk</span>
                                         </a>
                                     </li>
-                                    <li>
+                                   <!-- <li>
                                         <a th:href="@{ordering/order}">
                                             <span class="sub-item">Form Pemesanan</span>
                                         </a>
@@ -486,7 +486,7 @@
                                         <a th:href="@{user/registration}">
                                             <span class="sub-item">Form Pelanggan</span>
                                         </a>
-                                    </li>
+                                    </li>-->
                                 </ul>
                             </div>
                         </li>
@@ -642,7 +642,7 @@
                         </div>
                         <div class="ml-md-auto py-2 py-md-0">
                             <!--<a href="#" class="btn btn-white btn-bOrder btn-round mr-2">Manage</a>-->
-                            <a th:href="@{/user/registration}" class="btn btn-secondary btn-round">Tambah Pelanggan</a>
+                            <a th:href="@{/product}" class="btn btn-secondary btn-round">Tambah Produk</a>
                         </div>
                     </div>
                 </div>
