--- a/pemesanan/src/main/resources/templates/tables/showtransactionA.html
+++ b/pemesanan/src/main/resources/templates/tables/showtransactionA.html
@@ -252,7 +252,7 @@
 											<span class="sub-item">Form Produk</span>
 										</a>
 									</li>
-									<li>
+									<!--<li>
 										<a th:href="@{ordering/order}">
 											<span class="sub-item">Form Pemesanan</span>
 										</a>
@@ -266,7 +266,7 @@
 										<a th:href="@{user/registration}">
 											<span class="sub-item">Form Pelanggan</span>
 										</a>
-									</li>
+									</li>-->
 
 								</ul>
 							</div>
@@ -418,7 +418,10 @@
 											<tr>
 												<th>ID Transaksi</th>
 												<th>Id Pesanan</th>
-												<th>Jumlah Bayar</th>
+												<th>Total Harga</th>
+												<th>DP</th>
+												<th>Biaya Akhir</th>
+												<th>Bayar</th>
 												<th>Lunas</th>
 												<th>Struk pembayaran</th>
 												<th>Catatan</th>
@@ -433,21 +436,44 @@
 													<th:set var="count" value="${count + 1}" scope="page"></th:set>
 													<td th:text="${transaction.id_transaction}"></td>
 													<td th:text="${transaction.OrderId}"></td>
+													<td th:text="${transaction.ordering.totalCost}"></td>
+													<td th:text="${transaction.ordering.dp}"></td>
+													<td th:text="${transaction.ordering.finalCost}"></td>
 													<td th:text="${transaction.totalPay}"></td>
 													<td th:text="${transaction.lunas}"></td>
 													<td> <img th:src="'../resources/static/receipt/' +${transaction.receiptName}" alt="" width="150px" height="150px"></td>
 													<td id="notes" th:text="${transaction.note}"></td>
 													<td th:text="${transaction.transactionDate}"></td>
 													<td id="sts" th:text="${transaction.status.name}"></td>
-													<td>
-														<div class="form-button-action">
-															<button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Edit Task">
-																<a th:href="@{'/transaction/update/' + ${transaction.id_transaction}}" class="btn btn-info text-right" target="_blank">
-																	<!--<i class="fa fa-edit"></i>-->Ubah
-																</a>
-															</button>
+
+													<div th:if="${transaction.status.name=='Approved'}">
+														<td>
+														</td>
+													</div>
+													<div th:if="${transaction.status.name=='Pending'}">
+														<td>
+															<div class="form-button-action">
+																<button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Edit Task">
+																	<a th:href="@{'/transaction/update/' + ${transaction.id_transaction}}" class="btn btn-info text-right" target="_blank">
+																		<!--<i class="fa fa-edit"></i>-->Update
+																	</a>
+																</button>
+															</div>
+														</td>
+													</div>
+													<!--<div th:unless="${transaction.status.name=='Pending'}">
+														<div th:unless="${transaction.status.name=='Approved'}">
+															<td>
+																<div class="form-button-action">
+																	<button type="button" data-toggle="tooltip" title="" class="btn btn-link btn-primary btn-lg" data-original-title="Edit Task">
+																		<a th:href="@{'/transaction/update/' + ${transaction.id_transaction}}" class="btn btn-info text-right" target="_blank">
+																			&lt;!&ndash;<i class="fa fa-edit"></i>&ndash;&gt;Update
+																		</a>
+																	</button>
+																</div>
+															</td>
 														</div>
-													</td>
+													</div>-->
 												</tr>
 											</tbody>
 										</table>
